@@ -1,0 +1,11 @@
+[mod-setting-name]
+concrete-tints-revert-on-mining=Change mining results
+
+[mod-setting-description]
+concrete-tints-revert-on-mining=Revert to raw state when picking laid tiles back up
+
+[string-mod-setting]
+concrete-tints-revert-on-mining-never=Keep tint and hazard variation
+concrete-tints-revert-on-mining-tinted-only=Revert tinted concrete
+concrete-tints-revert-on-mining-hazard-only=Revert hazard concrete
+concrete-tints-revert-on-mining-always=Always revert to concrete
