@@ -1,0 +1,9 @@
+data:extend({
+    {
+        type = "string-setting",
+        name = "concrete-tints-revert-on-mining",
+        setting_type = "startup",
+        default_value = "tinted-only",
+        allowed_values = {"never", "tinted-only", "hazard-only", "always"}
+    }
+})
