@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: ????
+  Features:
+    - Add option for revert tint on mining tiles
   Changes:
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
